--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,10 @@ body {
   box-sizing: border-box;
 }
 
+header {
+  margin: 0;
+}
+
 nav {
   position: fixed;
   margin: 0 auto;
@@ -16,12 +20,12 @@ nav {
   text-shadow: rgb(255, 233, 219) 1px 1px 1px;
 }
 
-nav .desktop-nav-menu{
+nav .desktop-nav-menu {
   display: none;
-} 
+}
 
-@media only screen and (min-width:767px) {
-  nav .mobile-nav-menu {
+@media only screen and (min-width: 767px) {
+  nav .mobile-nav-icon {
     display: none;
   }
 
@@ -40,29 +44,45 @@ nav .desktop-nav-menu{
   }
 }
 
-.mobile-nav-sandwich .top-bar, .mobile-nav-sandwich .middle-bar, .mobile-nav-sandwich .bottom-bar {
+.mobile-nav-icon .top-bar,
+.mobile-nav-icon .middle-bar,
+.mobile-nav-icon .bottom-bar {
   width: 22px;
   height: 2px;
   background-color: #000;
   margin: 5px;
-  -webkit-transition: -webkit-transform .1s 0s ease-in-out,top .1s .1s ease-in-out;
-  -moz-transition: -moz-transform .1s 0s ease-in-out,top .1s .1s ease-in-out;
-  -ms-transition: -ms-transform .1s 0s ease-in-out,top .1s .1s ease-in-out;
-  -o-transition: -o-transform .1s 0s ease-in-out,top .1s .1s ease-in-out;
-  transition: transform .1s 0s ease-in-out,top .1s .1s ease-in-out;
+  -webkit-transition: -webkit-transform 0.1s 0s ease-in-out,
+    top 0.1s 0.1s ease-in-out;
+  -moz-transition: -moz-transform 0.1s 0s ease-in-out, top 0.1s 0.1s ease-in-out;
+  -ms-transition: -ms-transform 0.1s 0s ease-in-out, top 0.1s 0.1s ease-in-out;
+  -o-transition: -o-transform 0.1s 0s ease-in-out, top 0.1s 0.1s ease-in-out;
+  transition: transform 0.1s 0s ease-in-out, top 0.1s 0.1s ease-in-out;
   -webkit-transform-origin: 50% 50%;
   -moz-transform-origin: 50% 50%;
   -ms-transform-origin: 50% 50%;
   -o-transform-origin: 50% 50%;
   transform-origin: 50% 50%;
-} 
+}
 
-.mobile-nav-sandwich {
+.mobile-nav-icon {
   float: right;
 }
 
-.nav-overlay {
+.hide-mobile-nav-icon {
+  display: none;
+}
+
+.show-nav-overlay {
   background: rgba(249, 249, 250, 0.33);
+}
+
+.hide-nav-overlay {
+  display: none;
+}
+
+.hide-overlay-btn {
+  float: right;
+  border: none;
 }
 
 .mobile-nav-menu {
@@ -82,28 +102,8 @@ nav .desktop-nav-menu{
   font-size: 1.5em;
 }
 
-
 .logo-wrapper .logo {
   display: none;
-}
-
-/* @media only screen and (min-width: 650px) {
-   nav a {
-  float: right;
-  margin-right: 10px;
-}
-.hero h1 {
-  font-size: 60px;
-  font-weight: 900;
-  position: fixed;
-  top: -50px;
-  margin-left: 10px;
-}
-} */
-/* Hero */
-
-header {
-  margin: 0;
 }
 
 .hero {
@@ -113,7 +113,8 @@ header {
   height: 100vh;
   width: 100vw;
   /* hero image */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url('../images/balloon.png');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url("/assets/images/balloon.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -136,26 +137,3 @@ header {
 .hero h1.logo {
   display: none;
 }
-
-.hero .button {
-  /* positioning and sizing */
-  display: block;
-  width: 200px;
-
-  /* border */
-  border: 3px solid rgb(73, 11, 73);
-  border-radius: 10px;
-
-  /* padding and margins */
-  padding: 0.5em;
-  margin-bottom: 150px;
-  margin-top: 70px;
-  margin-right: auto;
-  margin-left: auto;
-
-  /* text-styles */
-  font-size: 20px;
-  color: rgb(255, 233, 219);
-  text-decoration: none;
-  background-color: rgba(204, 88, 16);
-  text-shadow: none;
