--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,11 +16,11 @@ nav {
   text-shadow: rgb(255, 233, 219) 1px 1px 1px;
 }
 
-nav .desktop-nav-menu{
+nav .desktop-nav-menu {
   display: none;
-} 
+}
 
-@media only screen and (min-width:767px) {
+@media only screen and (min-width: 767px) {
   nav .mobile-nav-menu {
     display: none;
   }
@@ -40,22 +40,25 @@ nav .desktop-nav-menu{
   }
 }
 
-.mobile-nav-sandwich .top-bar, .mobile-nav-sandwich .middle-bar, .mobile-nav-sandwich .bottom-bar {
+.mobile-nav-sandwich .top-bar,
+.mobile-nav-sandwich .middle-bar,
+.mobile-nav-sandwich .bottom-bar {
   width: 22px;
   height: 2px;
   background-color: #000;
   margin: 5px;
-  -webkit-transition: -webkit-transform .1s 0s ease-in-out,top .1s .1s ease-in-out;
-  -moz-transition: -moz-transform .1s 0s ease-in-out,top .1s .1s ease-in-out;
-  -ms-transition: -ms-transform .1s 0s ease-in-out,top .1s .1s ease-in-out;
-  -o-transition: -o-transform .1s 0s ease-in-out,top .1s .1s ease-in-out;
-  transition: transform .1s 0s ease-in-out,top .1s .1s ease-in-out;
+  -webkit-transition: -webkit-transform 0.1s 0s ease-in-out,
+    top 0.1s 0.1s ease-in-out;
+  -moz-transition: -moz-transform 0.1s 0s ease-in-out, top 0.1s 0.1s ease-in-out;
+  -ms-transition: -ms-transform 0.1s 0s ease-in-out, top 0.1s 0.1s ease-in-out;
+  -o-transition: -o-transform 0.1s 0s ease-in-out, top 0.1s 0.1s ease-in-out;
+  transition: transform 0.1s 0s ease-in-out, top 0.1s 0.1s ease-in-out;
   -webkit-transform-origin: 50% 50%;
   -moz-transform-origin: 50% 50%;
   -ms-transform-origin: 50% 50%;
   -o-transform-origin: 50% 50%;
   transform-origin: 50% 50%;
-} 
+}
 
 .mobile-nav-sandwich {
   float: right;
@@ -81,7 +84,6 @@ nav .desktop-nav-menu{
   color: rgb(64, 64, 72);
   font-size: 1.5em;
 }
-
 
 .logo-wrapper .logo {
   display: none;
@@ -113,7 +115,8 @@ header {
   height: 100vh;
   width: 100vw;
   /* hero image */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url('../images/balloon.png');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url("/assets/images/balloon.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -159,4 +162,4 @@ header {
   text-decoration: none;
   background-color: rgba(204, 88, 16);
   text-shadow: none;
-
+}
