added js mobile menu animation

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,6 +25,10 @@ nav .desktop-nav-menu {
     display: none;
   }
 
+  nav .nav-overlay {
+    display: none;
+  }
+
   nav .desktop-nav-menu {
     display: block;
     float: right;
@@ -66,6 +70,7 @@ nav .desktop-nav-menu {
 
 .nav-overlay {
   background: rgba(249, 249, 250, 0.33);
+  display: none;
 }
 
 .mobile-nav-menu {
